--- a/30178812/hotel.html
+++ b/30178812/hotel.html
@@ -39,7 +39,7 @@
     <body>
         <div class="container">
             <div class="name">
-                Hotel
+                Hotel (Room no. 0)
             </div>
             <div class="information">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum auctor nisl eu lacinia condimentum. Aenean sollicitudin, felis vel posuere ornare, justo risus ultricies tortor, venenatis dignissim augue metus sit amet dolor. Praesent sollicitudin lacus eu aliquet hendrerit. Phasellus sollicitudin nisi eget ligula luctus, id rutrum arcu tincidunt. Nulla eget sem pharetra, auctor urna in, viverra orci. Curabitur tincidunt condimentum orci id sagittis. Fusce venenatis eu tortor et consectetur. Nulla sem orci, aliquet quis vestibulum ut, molestie eu ex. Nam imperdiet posuere ante in rutrum. Cras vel fermentum est, non sagittis purus. 
