--- a/30178812/newnew1.html
+++ b/30178812/newnew1.html
@@ -4,8 +4,9 @@
             .container {
                 display: grid;
                 border-style: solid;
-                grid-template-columns: 30px;
-                grid-template-rows: 30px;
+                grid-template-columns: 1Fr 1Fr 1Fr;
+                grid-template-rows: 1Fr 1Fr 1Fr;
+                text-align: center;
             }
             .grid1 {
                 grid-column: 2;
@@ -22,6 +23,31 @@
                 grid-row-end: 3;
                 background-color: red;
             }
+            .grid4 {
+                grid-column-start: 2;
+                grid-column-end: 4;
+                grid-row-start: 2;
+                grid-row-end: 2;
+                background-color: aquamarine;
+            }
+            .container2 {
+                display: flex;
+                border-style: solid;
+                gap: 1rem;
+                padding: 20px;
+            }
+            .flex1 {
+                background-color: red;
+                width: 30%;
+            }
+            .flex2 {
+                background-color: beige;
+                width: 40%;
+            }
+            .flex3 {
+                background-color: yellow;
+                width: 30%;
+            }
         </style>
     </head>
     <body>
@@ -29,6 +55,12 @@
             <div class="grid1">Test</div>
             <div class="grid2">Test</div>
             <div class="grid3">Test</div>
+            <div class="grid4">Test</div>
+        </div>
+        <div class="container2">
+            <div class="flex1">Test</div>
+            <div class="flex2">Test</div>
+            <div class="flex3">Test</div>
         </div>
     </body>
 </html>
