--- a/30178812/javascript/index.html
+++ b/30178812/javascript/index.html
@@ -9,7 +9,7 @@
                 background-color: lightblue;
             }
         </style>
-        <script src="script.js"></script>
+        
     </head>
     <body id="element1">
         <div class="bodystyle">
@@ -24,5 +24,7 @@
         <button onClick="alert('This is an alert.')">This is a button</button>
         <button id="mybutton">My button</button>
         <input type="text" id="textinput" placeholder="Enter text here">
+        <p id="paragraph"></p>
+        <script type="module" src="script.js"></script>
     </body>
 </html>
