Reformatted, but still a mess

--- a/30178812/todolist/index.html
+++ b/30178812/todolist/index.html
@@ -4,16 +4,13 @@
 
     </head>
     <body>
-        <script type="module" src="script.js"></script>
         <h1>To-do list:</h1>
-        <ul id="list">
-            <!--
-            <li>Example item here</li>
-            -->
-        </ul>
+        <!--<li>Example item here</li>-->
+        <ul id="list"></ul>
         <input id="input" type="text" placeholder="Enter your item here">
         <button id="add">Add item</button>
         <!--<button id="remove">Remove last item</button>-->
         <button id="remove">Remove all items</button>
+        <script type="module" src="script.js"></script>
     </body>
 </html>
