--- a/30178812/todolist/index.html
+++ b/30178812/todolist/index.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>To-do list:</h1>
-        <!--<li>Example item here</li>-->
-        <ul id="list"></ul>
-        <input id="input" type="text" placeholder="Enter your item here">
-        <button id="add">Add item</button>
-        <!--<button id="remove">Remove last item</button>-->
-        <button id="remove">Remove all items</button>
-        <script type="module" src="script.js"></script>
+        <div class="container">
+            <t style="justify-self: center;">To-do list:</t>
+            <!--<li>Example item here</li>-->
+            <div class="border">
+                <ul id="list"></ul>
+            </div>
+            <br>
+            <div>
+                <input id="input" type="text" placeholder="Enter your item here">
+                <button id="add">Add item</button>
+                <!--<button id="remove">Remove last item</button>-->
+                <button id="remove">Remove all items</button>
+            </div>
+            <script type="module" src="script.js"></script>
+        </div>
     </body>
 </html>
