--- a/30178812/calculator/index.html
+++ b/30178812/calculator/index.html
@@ -1,9 +1,62 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <div class="container">
+            <div class="title">
+                0
+            </div>
+            <div class="one">
+                <button>1</button>
+            </div>
+            <div class="two">
+                <button>2</button>
+            </div>
+            <div class="three">
+                <button>3</button>
+            </div>
+            <div class="four">
+                <button>4</button>
+            </div>
+            <div class="five">
+                <button>5</button>
+            </div>
+            <div class="six">
+                <button>6</button>
+            </div>
+            <div class="seven">
+                <button>7</button>
+            </div>
+            <div class="eight">
+                <button>8</button>
+            </div>
+            <div class="nine">
+                <button>9</button>
+            </div>
+            <div class="zero">
+                <button>0</button>
+            </div>
+            <div class="division">
+                <button>÷</button>
+            </div>
+            <div class="multiplication">
+                <button>×</button>
+            </div>
+            <div class="subtraction">
+                <button>-</button>
+            </div>
+            <div class="addition">
+                <button>+</button>
+            </div>
+            <div class="equals">
+                <button>=</button>
+            </div>
+            <div class="clear">
+                <button>AC</button>
+            </div>
+        </div>
         <script type="module" src="script.js"></script>
     </body>
 </html>
