--- a/30178812/calculator/index.html
+++ b/30178812/calculator/index.html
@@ -4,57 +4,55 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <div class="container">
-            <div class="title">
-                0
-            </div>
+        <div class="container" id="container">
+            <div class="title" id="screen">0</div>
             <div class="one">
-                <button>1</button>
+                <button id="one">1</button>
             </div>
             <div class="two">
-                <button>2</button>
+                <button id="two">2</button>
             </div>
             <div class="three">
-                <button>3</button>
+                <button id="three">3</button>
             </div>
             <div class="four">
-                <button>4</button>
+                <button id="four">4</button>
             </div>
             <div class="five">
-                <button>5</button>
+                <button id="five">5</button>
             </div>
             <div class="six">
-                <button>6</button>
+                <button id="six">6</button>
             </div>
             <div class="seven">
-                <button>7</button>
+                <button id="seven">7</button>
             </div>
             <div class="eight">
-                <button>8</button>
+                <button id="eight">8</button>
             </div>
             <div class="nine">
-                <button>9</button>
+                <button id="nine">9</button>
             </div>
             <div class="zero">
-                <button>0</button>
+                <button id="zero">0</button>
             </div>
             <div class="division">
-                <button>÷</button>
+                <button id="division">÷</button>
             </div>
             <div class="multiplication">
-                <button>×</button>
+                <button id="multiplication">×</button>
             </div>
             <div class="subtraction">
-                <button>-</button>
+                <button id="subtraction">-</button>
             </div>
             <div class="addition">
-                <button>+</button>
+                <button id="addition">+</button>
             </div>
             <div class="equals">
-                <button>=</button>
+                <button id="equals">=</button>
             </div>
             <div class="clear">
-                <button>AC</button>
+                <button id="clear">AC</button>
             </div>
         </div>
         <script type="module" src="script.js"></script>
