--- a/30178812/new website/index.html
+++ b/30178812/new website/index.html
@@ -35,8 +35,9 @@
 
         <br>
 
-        <input type="submit" value="Book Class">
-        <script src="data.json"></script>
+        <form method="POST">
+            <input type="submit" value="Book Class">
+        </form>
         <script src="script.js"></script>
     </body>
 </html>
